test/runnable/testbcmain.d

// REQUIRED_ARGS: -betterC -main

void foo() { }

