test/fail_compilation/fail188.d
class Base {
	final void foo() {}
}

class Derived : Base {
        void foo() {}
}

